# quickgsim

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: publish_doc.yml
docs/: animal-reference.md  index.md  quick_setup-reference.md  recombination.md
examples/: Untitled.ipynb  a.txt  c28.csv  customGenome.ipynb  devel_traits.ipynb  diag_fromPython  hertiable_recomb.ipynb  how_ped_works.ipynb  how_xover_work.ipynb  p4004_treeped.txt  ped_vce.txt  phens_out.txt  phens_vce.txt  pop.ipynb  s_ped.csv  s_ped_reco.csv  simplePed.txt  simplePed2.txt  test_panel.csv
search/: search_index.json
site/: 404.html  index.html
site/animal-reference/: index.html
site/quick_setup-reference/: index.html
site/search/: search_index.json
src/quickgim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quickgsim/: __init__.py  animal.py  backends.py  genome.py  genotype.py  importers.py  pedigree.py  pop.py  quick_setup.py  sim.py  traits.py
