[metadata]
name = quickgim
version = 0.0.1
license = MIT
description = A simple genome simulator
long_description = file: README.md
author = Andreas Kranis
author_email = ...
classifiers=
   genomics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
  

[options.packages.find]
where=src