[metadata]
name = quickgim
version = 0.0.2
license = MIT
description = A simple genome simulator
long_description = file: README.md
author = Andreas Kranis
author_email = andreas.kranis@roslin.ed.ac.uk
classifiers=
   genomics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
  

[options.packages.find]
where=src