[metadata]
name = quickgsim
version = attr: quickgsim.__version__
license = MIT
description = A simple genome simulator
long_description = file: README.md
author = Andreas Kranis
author_email = andreas.kranis@roslin.ed.ac.uk
classifiers=
   genomics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
  

[options.packages.find]
where=src